gutter scrollbar fix

--- a/src/sass/helpers/_base.scss
+++ b/src/sass/helpers/_base.scss
@@ -8,7 +8,7 @@ html {
     font-weight: 400;
     letter-spacing: 0px;
     background-color: $white-bg;
-    overflow-x: hidden;
+    scrollbar-gutter: stable;
 }
 
 $paddingWidth: calc(fluid(5, 10) * 2);
